# travel-manager

./: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml
backend/: database.py  domain.py  main.py  models.py  schemas.py
deploy/: .env.example  Caddyfile.snippet  README.md  allowed_emails.txt.example  docker-compose.yml
src/: main.tsx  styles.css
tests/unit/: test_domain.py
